news section cards basic structure completed

--- a/index.html
+++ b/index.html
@@ -1,30 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tea House</title>
 
     <!-- Tailwind CSS -->
-         <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <!-- Google Font -->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
     <!-- Font Awesome -->
-         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+        integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- CSS Link -->
-        <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/style.css">
 
     <style>
-        *{
+        * {
             font-family: "Manrope", sans-serif;
         }
     </style>
 
-    
-    
+
+
 </head>
+
 <body>
     <header>
         <!-- banner section start -->
@@ -32,18 +36,23 @@
             <div class="flex flex-col lg:flex-row justify-between items-center px-4 md:px-0">
                 <!-- banner-left -->
                 <div class="banner-left space-y-[1.875rem]">
-                    <h1 class="dark-1 font-extrabold text-[3.25rem] md:text-[5rem] leading-[6.25rem]">It's good <br> tea time at The <br> Tea House</h1>
+                    <h1 class="dark-1 font-extrabold text-[3.25rem] md:text-[5rem] leading-[6.25rem]">It's good <br> tea
+                        time at The <br> Tea House</h1>
                     <p class="dark-2 font-medium text-[1.125rem] leading-[1.875rem]">
                         Tea and Botanical Solutions Supplier Give Optimum <br> Satisfaction To Your Taste Buds.
                     </p>
-                    <button class="bg-linear-to-r from-[#FF8938] to-[#FF0000] px-5 py-4 rounded-[10px] text-white cursor-pointer">Explore More <span class="inline-block -rotate-45"><i class="fa-solid fa-arrow-right-long"></i></span></button>
+                    <button
+                        class="bg-linear-to-r from-[#FF8938] to-[#FF0000] px-5 py-4 rounded-[10px] text-white cursor-pointer">Explore
+                        More <span class="inline-block -rotate-45"><i
+                                class="fa-solid fa-arrow-right-long"></i></span></button>
                 </div>
                 <!-- banner-right -->
                 <div class="banner-right relative mt-10 lg:mt-0">
                     <div class="banner-img">
                         <img src="./images/banner.png" alt="banner">
                     </div>
-                    <div class="flex justify-center items-center drop-shadow-1 rounded-[10px] absolute px-3 md:px-5 py-4 md:py-6 bottom-3 left-16 md:left-20 bg-white">
+                    <div
+                        class="flex justify-center items-center drop-shadow-1 rounded-[10px] absolute px-3 md:px-5 py-4 md:py-6 bottom-3 left-16 md:left-20 bg-white">
                         <div class="mr-2 w-8 md:w-fit md:mr-[13px]">
                             <img src="./images/Group 5.png" alt="ratings">
                         </div>
@@ -54,10 +63,48 @@
                     </div>
                 </div>
             </div>
-        </section> 
+        </section>
         <!-- banner section end -->
     </header>
-    <main></main>
+    <main>
+        <!-- news section start -->
+        <section class="container mx-auto">
+            <div class="card-container grid grid-cols-1 lg:grid-cols-3 gap-6 ">
+                <!-- card-1 -->
+                <div class="card drop-shadow-1 p-4 border border-[#D2D2D2] rounded-[10px]">
+                    <div class="">
+                        <img class="w-full" src="./images/news-1.png" alt="">
+                    </div>
+                    <p>Feb 05, 2027</p>
+                    <h3>Collecting 8 points for discount</h3>
+                    <p>There are many variations of passages of Lorem Ipsum available.</p>
+                    <button>Learn More</button>
+                </div>
+                <!-- card-2 -->
+                <div class="card drop-shadow-1 p-4 border border-[#D2D2D2] rounded-[10px]">
+                    <div class="">
+                        <img class="w-full" src="./images/news-1.png" alt="">
+                    </div>
+                    <p>Feb 05, 2027</p>
+                    <h3>Collecting 8 points for discount</h3>
+                    <p>There are many variations of passages of Lorem Ipsum available.</p>
+                    <button>Learn More</button>
+                </div>
+                <!-- card-3 -->
+                <div class="card drop-shadow-1 p-4 border border-[#D2D2D2] rounded-[10px]">
+                    <div class="">
+                        <img class="w-full" src="./images/news-1.png" alt="">
+                    </div>
+                    <p>Feb 05, 2027</p>
+                    <h3>Collecting 8 points for discount</h3>
+                    <p>There are many variations of passages of Lorem Ipsum available.</p>
+                    <button>Learn More</button>
+                </div>
+            </div>
+        </section>
+        <!-- news section end -->
+    </main>
     <footer></footer>
 </body>
+
 </html>
